# online-pricing

./: .flake8  .gitignore  InfluenceFunction.py  OptimizationProblem.md  README.md  Simulator.py  mypy.ini  pyproject.toml
.github/workflows/: code-quality.yml  pytest.yml
online_pricing/: DataWrapper.py  Environment.py  InfluenceFunction.py  Learner.py  Regret.py  RewardEstimator.py  Simulator.py  Social_Influence.py  Wishart.py  demand_curves.R  environment.py  influence_function.py  initialise_R.R  learner.py  learners.py  main.py  regret.py  reward_estimator.py  simulator.py  social_influence.py  tracer.py  user.py  utils.py
online_pricing/common/: environment.py  influence_function.py  learner.py  simulator.py  social_influence.py
online_pricing/helpers/: tracer.py  utils.py  wishart.py
online_pricing/learners/: learners.py
online_pricing/models/: learner.py  rewards_and_features.py  user.py
online_pricing/r/: demand_curves.R  initialise_R.R
plots copy/step_3/: avg_reward_1  avg_reward_3_ucb  avg_reward_4  avg_reward_5  avg_reward_5_ucb  conversion_rates_1  conversion_rates_1_ucb  conversion_rates_3  conversion_rates_3_ucb  conversion_rates_4_ucb  mean_rewards  mean_rewards_ucb
plots copy/step_4/: avg_reward_1  avg_reward_3  avg_reward_4  avg_reward_5  conversion_rates_3  mean_rewards
plots copy/step_5/: avg_regret  avg_reward_2
plots copy/step_6/: avg_regret_sw  avg_reward_1  avg_reward_mucb  mean_reward_mucb
plots copy/step_7/: avg_regret  avg_reward_1  avg_reward_6  conversion_rates_2  conversion_rates_3  (+1 more)
test/: test_online-pricing.py
