[tool.poetry]
name = "online-pricing"
version = "0.1.0"
description = "Online Learning Application project source code."
authors = ["Filippo Manzardo <filippommanzardo@gmail.com> | <add your email here>"]

[tool.poetry.dependencies]
python = "~3.10"
numpy = "^1.22.3"
rpy2 = "^3.5.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

