[tool.poetry]
name = "online-pricing"
version = "0.1.0"
description = "Online Learning Application project source code."
authors = ["Filippo Manzardo <filippommanzardo@gmail.com> | <add your email here>"]

[tool.poetry.dependencies]
python = "~3.10"

numpy = "^1.22.3"
rpy2 = "^3.5.1"
matplotlib = "^3.5.3"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
mypy = "^0.950"
pytest = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
simulator = "online_pricing.main:main"

[tool.black]
line-length = 125
target-version = ['py310']
exclude = '''
(
    \.idea |
    \.DS_Store |
    \.githooks |
    \.vscode |
    venv |
    .html |
    .json |
    .pyc |
    .sql
)
'''

[tool.isort]
profile = "black"
line_length = 125
